2017-03-20  Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	Correct order of LDFLAGS.

2016-12-21  Riccardo Mottola <rm@gnu.org>

	* xpdf/bridge/XPDFBridge.h
	* xpdf/bridge/XPDFBridge.cc
	* PDFDocument.m
	Differentiate betweem Media and Crop sizes and use the latter for sizing the document.

2016-12-14  Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	Reinstantiate OpenBSD specific LDFLAG.

2016-12-08  Riccardo Mottola <rm@gnu.org>

	* configure
	* configure.ac
	Remove freetype options, makefiles now use freetype-config

2016-12-08  Riccardo Mottola <rm@gnu.org>

	* GNUmakefile.in
	* xpdf/xpdf-3.04/GNUmakefile.in
	Rely on freetype-config CFLAGS and LDFLAGS instead of manually building directories, fixes NetBSD

2016-12-07  Riccardo Mottola <rm@gnu.org>

	* configure
	* configure.ac
	Remove special netbsd case and use freetype-config.

2016-12-06  Riccardo Mottola <rm@gnu.org>

	* xpdf/bridge/XPDFBridge.cc
	Set string encoding to UTF-8

	* PDFDocument.m
	Allocate text string using length and not null term.


2016-12-02  Riccardo Mottola <rm@gnu.org>

	* PDFDocument.h
	* PDFDocument.m
	Provide pageCount and wrap countPages around it for compatibility.

2016-12-01  Riccardo Mottola <rm@gnu.org>

	* PDFDocument.h
	* PDFDocument.m
	* xpdf/bridge/XPDFBridge.cc
	* xpdf/bridge/XPDFBridge.h
	Transform static variable documentInfo in an IVAR and add extra argument passing to the bridge functions.

2016-12-01  Riccardo Mottola <rm@gnu.org>

	* PDFDocument.h
	* PDFDocument.m
	* xpdf/bridge/XPDFBridge.cc
	* xpdf/bridge/XPDFBridge.h
	Transform static variable textContents in an IVAR and add extra argument passing to the bridge functions.

2016-11-30  Riccardo Mottola <rm@gnu.org>

	* PDFFontManager.h
	* PDFFontManager.m
	Remove FontType from methods, since it is no longer needed.

2016-11-30  Riccardo Mottola <rm@gnu.org>

	* PDFFontManager.h
	* PDFFontManager.m
	* xpdf/bridge/XPDFBridge.cc
	* xpdf/bridge/XPDFBridge.h